src/test/ui/consts/const-eval/issue-49296.stderr
error: any use of this value will cause an error
  --> $DIR/issue-49296.rs:18:16
   |
LL | const X: u64 = *wat(42);
   | ---------------^^^^^^^^-
   |                |
   |                dangling pointer was dereferenced
   |
   = note: #[deny(const_err)] on by default

error: aborting due to previous error

